<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/backlogin"
    android:padding="@dimen/activity_vertical_padding"
    tools:context=".view.login.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:padding="50dp"
        android:orientation="vertical"
        >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <ImageView
                android:id="@+id/logoLogin"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="5dp"
                android:src="@drawable/logo"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/suka_learning"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/usernameRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="10dp"
                android:background="@drawable/textbox"
                android:hint="@string/username"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/emailRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="10dp"
                android:background="@drawable/textbox"
                android:hint="@string/prompt_email"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/prodiRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="10dp"
                android:background="@drawable/textbox"
                android:hint="@string/program_studi"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/passwordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="10dp"
                android:background="@drawable/textbox"
                android:hint="@string/password"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/retypePasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:padding="10dp"
                android:background="@drawable/textbox"
                android:hint="@string/ketik_ulang_password"
                />
            <TextView
                android:id="@+id/checkConfirmPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="*Kata sandi tidak sama"
                android:textSize="16dp"
                android:textColor="@android:color/holo_red_light"
                android:layout_marginTop="-12dp"
                android:paddingBottom="10dp"
                android:visibility="gone"
                />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/submitRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:background="@drawable/mybutton"
            />
    </LinearLayout>
</ScrollView>