<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Detaillayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:titleTextAppearance="@style/TitleBarTextAppearance"
    android:padding="@dimen/activity_horizontal_padding"
    tools:context=".view.DetailActivity">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/rv_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/rv_detail_foto_new"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_margin="@dimen/activity_vertical_margin"
                android:contentDescription="@string/image_of_dosen_and_mahasiswa" />
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="190dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/rv_detail_name_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_name"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    />
                <TextView
                    android:id="@+id/rv_detailgelar_data_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_gelar"
                    android:textSize="@dimen/text_content"
                    android:layout_marginTop="@dimen/text_margin"
                    />
                <TextView
                    android:id="@+id/rv_detail_content_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lorem_ipsum_dolor_sit_amet"
                    android:textSize="@dimen/text_content"
                    />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/time_detail"
                    android:layout_margin="10dp"
                    android:layout_gravity="center_vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10/10/2018 08.00"
                    android:textSize="11sp"
                    />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@android:color/darker_gray">
            <TextView
                android:id="@+id/like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="100dp"
                android:text="like"/>
            <TextView
                android:id="@+id/comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_gravity="center"
                android:text="comment"/>
            <TextView
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:text="share"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>